crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__list_recovery_17.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests ::\nparsing_expr_string(r#\"{\n    if True:\n        b = [] = \n}\n\"#)"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: None,
                        value: Node {
                            node: ConfigIfEntry(
                                ConfigIfEntryExpr {
                                    if_cond: Node {
                                        node: NameConstantLit(
                                            NameConstantLit {
                                                value: True,
                                            },
                                        ),
                                        filename: "",
                                        line: 2,
                                        column: 7,
                                        end_line: 2,
                                        end_column: 11,
                                    },
                                    items: [
                                        Node {
                                            node: ConfigEntry {
                                                key: Some(
                                                    Node {
                                                        node: Identifier(
                                                            Identifier {
                                                                names: [
                                                                    Node {
                                                                        node: "b",
                                                                        filename: "",
                                                                        line: 3,
                                                                        column: 8,
                                                                        end_line: 3,
                                                                        end_column: 9,
                                                                    },
                                                                ],
                                                                pkgpath: "",
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 3,
                                                        column: 8,
                                                        end_line: 3,
                                                        end_column: 9,
                                                    },
                                                ),
                                                value: Node {
                                                    node: List(
                                                        ListExpr {
                                                            elts: [],
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    filename: "",
                                                    line: 3,
                                                    column: 12,
                                                    end_line: 3,
                                                    end_column: 14,
                                                },
                                                operation: Override,
                                                is_shorthand: false,
                                            },
                                            filename: "",
                                            line: 3,
                                            column: 8,
                                            end_line: 3,
                                            end_column: 14,
                                        },
                                        Node {
                                            node: ConfigEntry {
                                                key: Some(
                                                    Node {
                                                        node: Missing(
                                                            MissingExpr,
                                                        ),
                                                        filename: "",
                                                        line: 3,
                                                        column: 15,
                                                        end_line: 3,
                                                        end_column: 16,
                                                    },
                                                ),
                                                value: Node {
                                                    node: Missing(
                                                        MissingExpr,
                                                    ),
                                                    filename: "",
                                                    line: 3,
                                                    column: 17,
                                                    end_line: 4,
                                                    end_column: 0,
                                                },
                                                operation: Override,
                                                is_shorthand: false,
                                            },
                                            filename: "",
                                            line: 3,
                                            column: 15,
                                            end_line: 4,
                                            end_column: 0,
                                        },
                                    ],
                                    orelse: None,
                                },
                            ),
                            filename: "",
                            line: 2,
                            column: 4,
                            end_line: 4,
                            end_column: 0,
                        },
                        operation: Union,
                        is_shorthand: false,
                    },
                    filename: "",
                    line: 2,
                    column: 4,
                    end_line: 4,
                    end_column: 0,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 4,
    end_column: 1,
}
