crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__list_recovery_9.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"[*a, **b]\")"
---
Node {
    node: List(
        ListExpr {
            elts: [
                Node {
                    node: Starred(
                        StarredExpr {
                            value: Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "a",
                                                filename: "",
                                                line: 1,
                                                column: 2,
                                                end_line: 1,
                                                end_column: 3,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 2,
                                end_line: 1,
                                end_column: 3,
                            },
                            ctx: Load,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 3,
                },
                Node {
                    node: Binary(
                        BinaryExpr {
                            left: Node {
                                node: Missing(
                                    MissingExpr,
                                ),
                                filename: "",
                                line: 1,
                                column: 5,
                                end_line: 1,
                                end_column: 7,
                            },
                            op: Pow,
                            right: Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "b",
                                                filename: "",
                                                line: 1,
                                                column: 7,
                                                end_line: 1,
                                                end_column: 8,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 7,
                                end_line: 1,
                                end_column: 8,
                            },
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 5,
                    end_line: 1,
                    end_column: 8,
                },
            ],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 9,
}
